# rust-examples

./: Cargo.toml  READM.md  README.md  data.json  match_info.json
src/: main.rs
src/api/: futbolapi.rs  mod.rs
src/structure/: structures.rs
