[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
aws-config = "0.55.0"
aws-sdk-dynamodb = "0.25.1"
serde_json = "1.0.95"
tokio = { version = "1.12.0", features = ["full"] }
tokio-stream = "0.1.12"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }